Lotto and Landing page complete

--- a/css/style1.css
+++ b/css/style1.css
@@ -88,6 +88,14 @@ body {
     outline: none;
 }
 
+/* Chrome, Safari, Edge, Opera */
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+  
+
 .form-container {
     position: absolute;
     top: 0;
