--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h2 {
     justify-content: center;
     margin: 20px auto;
     text-align: center;
+    text-shadow: 2px 2px #000;
 }
 
 .main-container {
@@ -48,6 +49,12 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.main-container h1{
+    color: white;
+    font-size: 3rem;
+    text-shadow: 2px 4px #000;
 }
 
 main {
@@ -72,6 +79,23 @@ main {
     width: 60px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.7);
     text-align: center;
+}
+
+.numbers input{
+    margin: 0 15px;
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    width: 60px;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.7);
+    text-align: center;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .plus-bonus .numbers {
