--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ main {
     width: 60px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.7);
     text-align: center;
+    font-size: 20px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -113,6 +114,7 @@ input[type="number"]::-webkit-inner-spin-button {
     background-color: var(--header-color);
     border: none;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .btn:active {
