--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,12 @@ main {
     width: 60px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.7);
     text-align: center;
+    color: white;
+    font-size: 20px;;
 }
 
 .numbers input{
-    margin: 0 15px;
+    margin: 0 20px;
     padding: 15px;
     border-radius: 5px;
     border: none;
