--- a/css/landing.css
+++ b/css/landing.css
@@ -28,8 +28,22 @@ nav {
     width: 100%;
     height: 100px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
+}
+
+.menu-icon {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.menu-icon div {
+    width: 30px;
+    height: 3px;
+    background-color: white;
+    margin: 5px 0;
 }
 
 .menu a {
@@ -114,26 +128,42 @@ nav {
         width: 100px;
         margin-top: 20px;
     }
-    
+
+    .menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.8);
+        position: absolute;
+        top: 100px;
+        width: 100%;
+        left: 0;
+    }
+
     .menu a {
         font-size: 1.2em;
-        padding: 8px 16px;
+        padding: 10px 0;
+        width: 100%;
+        text-align: center;
     }
-    
-    .register a {
-        font-size: 1.2em;
-        padding: 8px 16px;
+
+    .menu-icon {
+        display: flex;
     }
-    
+
+    .register {
+        display: none;
+    }
+
     .h-txt span {
         font-size: 20px;
         letter-spacing: 3px;
     }
-    
+
     .h-txt h1 {
         font-size: 2.5rem;
     }
-    
+
     .h-txt a {
         font-size: 20px;
         padding: 8px 16px;
@@ -147,26 +177,26 @@ nav {
         width: 120px;
         margin-top: 30px;
     }
-    
+
     .menu a {
         font-size: 1.3em;
         padding: 9px 18px;
     }
-    
+
     .register a {
         font-size: 1.3em;
         padding: 9px 18px;
     }
-    
+
     .h-txt span {
         font-size: 22px;
         letter-spacing: 4px;
     }
-    
+
     .h-txt h1 {
         font-size: 3rem;
     }
-    
+
     .h-txt a {
         font-size: 25px;
         padding: 9px 18px;
@@ -180,29 +210,34 @@ nav {
         width: 150px;
         margin-top: 45px;
     }
-    
+
     .menu a {
         font-size: 1.5em;
         padding: 10px 20px;
     }
-    
+
     .register a {
         font-size: 1.5em;
         padding: 10px 20px;
     }
-    
+
     .h-txt span {
         font-size: 25px;
         letter-spacing: 5px;
     }
-    
+
     .h-txt h1 {
         font-size: 3.5rem;
     }
-    
+
     .h-txt a {
         font-size: 30px;
         padding: 10px 20px;
         letter-spacing: 5px;
     }
+}
+
+/* Menu Toggle Styles */
+.menu.open {
+    display: flex;
 }
