--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h2 {
     align-items: center;
 }
 
-.main-container h1{
+.main-container h1 {
     color: white;
     font-size: 3rem;
     text-shadow: 2px 4px #000;
@@ -80,10 +80,10 @@ main {
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.7);
     text-align: center;
     color: white;
-    font-size: 20px;;
+    font-size: 20px;
 }
 
-.numbers input{
+.numbers input {
     margin: 0 20px;
     padding: 15px;
     border-radius: 5px;
@@ -125,8 +125,30 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Media Queries */
 
-/* Tablets (Portrait and Landscape) */
-@media (max-width: 1024px) {
+/* Desktops and Laptops (larger than 1024px) */
+@media (min-width: 1024px) {
+    .main-container {
+        width: 70%;
+        height: 70%;
+    }
+
+    header h1 {
+        font-size: 4rem;
+    }
+
+    .numbers div {
+        width: 70px;
+        margin: 0 25px;
+        padding: 20px;
+    }
+
+    .btn {
+        padding: 20px;
+    }
+}
+
+/* Tablets (Portrait and Landscape, 768px to 1024px) */
+@media (max-width: 1024px) and (min-width: 768px) {
     .main-container {
         width: 90%;
         height: 85%;
@@ -147,8 +169,8 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 
-/* Phones (Landscape) */
-@media (max-width: 768px) {
+/* Phones (Landscape, 480px to 768px) */
+@media (max-width: 768px) and (min-width: 480px) {
     .main-container {
         width: 95%;
         height: 90%;
@@ -169,7 +191,7 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 
-/* Phones (Portrait) */
+/* Phones (Portrait, less than 480px) */
 @media (max-width: 480px) {
     .main-container {
         width: 100%;
@@ -207,4 +229,3 @@ input[type="number"]::-webkit-inner-spin-button {
         padding: 10px;
     }
 }
-
