--- a/css/style1.css
+++ b/css/style1.css
@@ -127,6 +127,11 @@ input[type="number"]::-webkit-inner-spin-button {
     animation: move 0.6s;
 }
 
+.payment {
+    margin-left: 180px;
+    width: 50%;
+}
+
 @keyframes move {
     0%, 49.99% {
         opacity: 0;
